<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/name"
        android:textSize="14sp"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/mobileText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/mobile"
        android:textSize="14sp"
        android:padding="4dp"/>

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rating"
        android:textSize="14sp"
        android:padding="4dp"/>
</LinearLayout>
